Ajuste no trasmento de excecao para autenticacao